--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@tailwindcss/typography": "^0.3.0",
         "autoprefixer": "^10.0.2",
         "axios": "^0.21",
+        "bootstrap": "^5.0.0-beta1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "portal-vue": "^2.1.7",
