--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "laravel/sanctum": "^2.6",
     "laravel/tinker": "^2.5",
     "laravel/ui": "^3.2",
+    "rennokki/laravel-eloquent-query-cache": "^2.6",
     "tightenco/ziggy": "^1.0"
   },
   "require-dev": {
