--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "laravel/tinker": "^2.5",
     "laravel/ui": "^3.2",
     "rennokki/laravel-eloquent-query-cache": "^2.6",
+    "roumen/feed": "^8.0",
     "tightenco/ziggy": "^1.0"
   },
   "require-dev": {
