--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "test": "tests"
   },
   "dependencies": {
-    "@popperjs/core": "^2.9.1"
+    "@popperjs/core": "^2.9.1",
+    "chart.js": "^2.9.4",
+    "materialize-css": "^1.0.0-rc.2",
+    "vue-chartjs": "^3.5.1"
   },
   "repository": {
     "type": "git",
