--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=41ecfa09595544974438",
+    "/css/app.css": "/css/app.css?id=312152469ae367d90be1",
+    "/css/all.css": "/css/all.css?id=905b05842d7d0e4547db"
 }
