--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^7.3|^8.0",
+    "php": "^8.0",
     "ext-curl": "*",
     "ext-json": "*",
     "fideloper/proxy": "^4.4",
@@ -25,8 +25,7 @@
     "rennokki/laravel-eloquent-query-cache": "^2.6",
     "roumen/feed": "^8.0",
     "tightenco/ziggy": "^1.0",
-    "twbs/bootstrap": "5.0.0-alpha1",
-	"ext-http": "*"
+    "twbs/bootstrap": "5.0.0-alpha1"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.5",
