--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "test": "tests"
   },
   "dependencies": {
-    "@popperjs/core": "^2.9.1",
-    "materialize-css": "^1.0.0-rc.2"
+	"@popperjs/core": "^2.9.1",
+	"feather-icons": "^4.28.0",
+	"materialize-css": "^1.0.0-rc.2"
   },
   "repository": {
     "type": "git",
